# hexbot

./: .gitignore  .gitmodules
Assets/Plugins/hexbot.bundle/Contents/: Info.plist
Assets/Plugins/hexbot.bundle/Contents/MacOS/: hexbot
core/projects/: configure-mac.sh
core/projects/mac/: hexbot-Info.plist
core/projects/mac/hexbot.xcodeproj/: project.pbxproj
core/projects/mac/hexbot.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
core/projects/mac/hexbot.xcodeproj/project.xcworkspace/xcuserdata/desertkun.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
core/projects/mac/hexbot.xcodeproj/xcuserdata/desertkun.xcuserdatad/xcschemes/: hexbot.xcscheme  xcschememanagement.plist
core/projects/windows/: hexbot.sln  hexbot.vcxproj  hexbot.vcxproj.filters
core/projects/windows/tmp/: vc120.idb
core/src/: CMakeLists.txt  animation.cpp  animation.h  api.cpp  api.h  main.cpp  main.h  utils.h
models/: Skeleton.max
unity/: Assembly-CSharp.csproj  unity.csproj  unity.sln
unity/Assets/Materials/: 07 - Default.mat  08 - Default.mat  09 - Default.mat  Black.mat  Body.physicMaterial  Foots.physicMaterial  Green.mat
unity/Assets/Meshes/: body.FBX  leg-1.FBX  leg-2.FBX  leg-3.FBX  leg-4.FBX  leg-5.FBX  leg-6.FBX  leg-7.FBX
unity/Assets/Other/: CameraView.renderTexture
unity/Assets/Other/Materials/: CameraView.mat
unity/Assets/Prefabs/: foot.prefab  hexbot.prefab  leg-1.prefab  leg-4.prefab  servo-2.prefab
unity/Assets/Scenes/: Main.unity
unity/Assets/Scripts/: IDevice.cs  MotionDetectorDevice.cs  MouseLook.cs  Native.cs  Robo.cs  ServoController.cs  ServoModule.cs
unity/Assets/StreamingAssets/: forward-group.json  forward.json
unity/ProjectSettings/: ProjectSettings.asset
